-- Expose fb_error_message and fb_error_code directly in APIError
Updated methods:
-- GraphCollection.parse_page_url now uses the URI library and can parse any address (thanks, bnorton!)
Internal improvements:
-- Update MultiJson dependency to support the Oj library (thanks, zinenko!)
-- Loosened Faraday dependency (thanks, rewritten and romanbsd!)
-- Fixed typos (thanks, nathanbertram!)
-- Cleaned up gemspec
Documentation:
-- Added HTTP Services description for Faraday 0.8/persistent connections (thanks, romanbsd!)
-- Remove documentation of the old pre-1.2 HTTP Service options

v.1.4.1
-- Update MultiJson to 1.3 and change syntax to silence warnings (thanks, eckz and masterkain!)

v1.4
New methods:
-- OAuth#exchange_access_token(_info) allows you to extend access tokens you receive (thanks, etiennebarrie!)
Updated methods:
-- HTTPServices#encode_params sorts parameters to aid in URL comparison (thanks, sholden!)
-- get_connections is now aliased as get_connection (use whichever makes sense to you)
Internal improvements:
-- Fixed typos (thanks, brycethornton and jpemberthy!)
-- RealtimeUpdates will no longer execute challenge block unnecessarily (thanks, iainbeeston!)
Testing improvements:
-- Added parallel_tests to development gem file
-- Fixed failing live tests
-- Koala now tests against JRuby and Rubinius in 1.9 mode on Travis-CI

v1.3
New methods:
-- OAuth#url_for_dialog creates URLs for Facebook dialog pages
-- API#set_app_restrictions handles JSON-encoding app restrictions
-- GraphCollection.parse_page_url now exposes useful functionality for non-Rails apps
-- RealtimeUpdates#subscription_path and TestUsers#test_user_accounts_path are now public
Updated methods:
-- REST API methods are now deprecated (see http://developers.facebook.com/blog/post/616/)
-- OAuth#url_for_access_token and #url_for_oauth_code now include any provided options as URL parameters
-- APIError#raw_response allows access to the raw error response received from Facebook